# anaforatools

./: README.md  pyproject.toml  setup.py
anafora/: __init__.py  cleanup.py  copy_text.py  eval.py  evaluate.py  heuristic.py  labelstudio.py  regex.py  select.py  timeml.py  validate.py
anafora/predict/: entity_span_by_regex.py  memorize_entities_by_text.py
anafora/test/: test_anafora.py  test_anafora_eval.py  test_anafora_evaluate.py  test_anafora_heuristic.py  test_anafora_regex.py  test_anafora_timeml.py  test_anafora_validate.py
